<resources>
    <string name="app_name">رادیو اتو-اسعد</string>
    <string name="app_label">رادیو اتو-اسعد</string>
    <string name="app_title">رادیو اتو-اسعد</string>
    <string name="title_activity_splash_screen">رادیو اتو-اسعد</string>

    <string name="title_live">زنده از پورت جف</string>
    <string name="title_feed">رادیوی شما</string>
    <string name="title_archive">آرشیو برنامه‌ها</string>
    <string name="title_settings">تنظیمات</string>
    <string name="title_public_program_settings">تنظیمات برنامه‌های عمومی</string>
    <string name="title_personal_program_settings">تنظیمات برنامه‌های محلی شما</string>

    <string name="label_loading">چند لحظه لطفا…</string>
    <string name="label_pre_loading_images">یه کم بزک دوزک…</string>
    <string name="label_splash_work_done">ایول، ردیف شد!</string>

    <string name="default_program_description">هنوز چیزی به ذهنمون نرسیده در مورد این برنامه بنویسیم!</string>

    <string name="card_play">پخش</string>
    <string name="card_pause">توقف</string>

    <!-- Live broadcast -->
    <string name="live_card_soon">برنامه‌ی بعدی</string>
    <string name="live_card_counter">شروع در %1$</string>

    <string name="status_program_finish">شب بخیر! ادامه‌ی برنامه‌های رادیو از نیمه شب…</string>
    <string name="status_now_playing">در حال پخش: %1$s</string>

    <!-- Feed -->
    <string name="personal_feed_section_header">زمان‌بندی شده بر اساس مکان شما</string>
    <string name="public_feed_section_header">برنامه‌های جاری رادیو</string>
    <string name="personal_feed_section_footer">رسیدن بخیر! کمی زمان لازمه تا رادیو زمان‌بندی شما رو یاد بگیره. به زودی برنامه‌های این بخش براتون نمایش داده میشه.</string>
    <string name="public_feed_section_footer">فعلا برنامه‌ای اینجا نیست. برنامه‌های جدید رادیو از دوشنبه شب تا جمعه شب هر هفته (به وقت شرق آمریکا) منتشر می‌شن.</string>

    <!-- playback -->
    <string name="playback_mode_resume_default">پخش ادامه</string>
    <string name="playback_mode_resume">پخش ادامه (%1$s دقیقه مانده)</string>
    <string name="playback_mode_from_start">پخش از ابتدا</string>
    <string name="playback_mode_request_text">قبلا کمی از این برنامه رو گوش دادین. حالا چیکار کنیم؟</string>

    <!-- Notification strings -->
    <string name="start_stop_action_description">توقف/شروع</string>
    <string name="pause_action_description">قطع</string>
    <string name="cancel_playback_description">بستن</string>

    <!-- Settings string -->
    <string name="notify_on_personal_programs">اعلام شروع برنامه‌های محلی شما</string>
    <string name="notify_on_public_programs">اعلام انتشار برنامه‌های جدید رادیو</string>
    <string name="raa_media_copyright">۲۰۱۷-۱۸ - رادیو اتو-اسعد - برای اطلاع از موارد حقوقی به سایت raa.media مراجعه کنید.</string>

    <string name="default_content_description">تصویر</string>
    <string name="default_program_title">برنامه</string>
    <string name="default_program_subtitle">توضیحات برنامه</string>
</resources>
