<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.player.PlaybackModeRequesterPopup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/playback_mode_request_text"/>

    <Button
        android:id="@+id/playback_mode_resume_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:layout_above="@id/playback_mode_from_start_btn"
        android:background="@color/color_primary"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/playback_mode_resume" />

    <Button
        android:id="@+id/playback_mode_from_start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:background="@color/color_playback_cancel_btn_background"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/playback_mode_from_start" />

</RelativeLayout>