<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/text_margin"
    android:layoutDirection="rtl">

    <ImageButton
        android:id="@+id/notification_bar_player_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/player_thumbnail_margin"
        android:layout_marginStart="@dimen/player_thumbnail_margin"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitStart"
        android:contentDescription="@string/default_content_description" />

    <ImageView
        android:id="@+id/notification_bar_player_program_thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="@dimen/player_thumbnail_margin"
        android:layout_marginStart="@dimen/player_thumbnail_margin"
        android:layout_toEndOf="@id/notification_bar_player_cancel_button"
        android:adjustViewBounds="true"
        android:contentDescription="@string/default_content_description"
        android:src="@drawable/img_default_thumbnail" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/notification_bar_player_action_button"
        android:layout_toEndOf="@id/notification_bar_player_program_thumbnail"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_bar_player_program_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:text="@string/default_program_title" />

        <TextView
            android:id="@+id/notification_bar_player_program_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="normal"
            android:text="@string/default_program_subtitle" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/notification_bar_player_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/text_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/start_stop_action_description"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitStart" />

</RelativeLayout>