<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="media.raa.raa_android_player.view.player.PlayerFragment">

    <TextView
        android:id="@+id/player_background"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_player_background"
        android:layout_gravity="bottom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/player_thumbnail_margin"
            android:layout_marginStart="@dimen/player_thumbnail_margin"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/default_content_description"
            android:src="@drawable/img_default_thumbnail" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/player_bar_action_button"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_bar_program_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold"
                android:text="@string/default_program_title" />

            <TextView
                android:id="@+id/player_bar_program_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="normal"
                android:text="@string/default_program_subtitle" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/player_bar_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_stop_action_description"
            android:background="?android:selectableItemBackground"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_pause_black_24dp" />
    </RelativeLayout>

</FrameLayout>
