<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/notification_art_image"
        android:layout_marginStart="@dimen/notification_icon_horizontal_margin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="fitStart"
        android:contentDescription="@string/app_label"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_raa_logo" />

    <ImageButton
        android:id="@+id/notification_action_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_stop_action_description"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/notification_action_horizontal_margin"
        android:src="@drawable/ic_play_button"
        android:background="@null" />

    <ImageButton
        android:id="@+id/notification_action_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pause_action_description"
        android:layout_toStartOf="@id/notification_action_start_stop"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_pause_button"
        android:background="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toStartOf="@+id/notification_action_pause"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/notification_action_horizontal_margin">

        <TextView
            android:id="@+id/notification_program_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:layout="@+id/notification_action_start_stop"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/notification_program_clips_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl" />
    </LinearLayout>


</RelativeLayout>